# lakehouse-performance-benchmark-lab

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
configs/: benchmark_config.json
docs/: benchmark_dashboard.html  benchmark_report.md  benchmark_report_template.md  methodology.md  portfolio_summary.md
src/: analyze_results.py  convert_formats.py  generate_dataset.py  run_benchmark_duckdb.py
