[project]
name = "lakehouse-performance-benchmark-lab"
version = "0.1.0"
description = "Project portfolio untuk benchmark storage format dan query performance lakehouse."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=16.0.0",
    "matplotlib>=3.8.0",
    "psutil>=5.9.0",
    "rich>=13.7.0",
    "tabulate>=0.9.0"
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
